refatorei o código em algumas partes e criei validações para barrar ao inserir um novo pacientes inválidos pelo form

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 					<tbody id="tabela-pacientes">
 						<tr class="paciente" id="primeiro-paciente" >
 							<td class="info-nome">Paulo</td>
-							<td class="info-peso">80</td>
-							<td class="info-altura">1.70</td>
+							<td class="info-peso">60</td>
+							<td class="info-altura">1.90</td>
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
 						</tr>
@@ -91,7 +91,7 @@
 					<label for="gordura">% de Gordura:</label>
 					<input id="gordura" name="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
 				</div>
-		
+				<span id="mensagem-erro"></span>
 				<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
 			</form>
 		</section>
